--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ go.work.sum
 # production
 /dist
 
-README.md
+
 
 # misc
 .DS_Store
@@ -43,6 +43,8 @@ README.md
 .env.development.local
 .env.test.local
 .env.production.local
+
+public/images/*
 
 npm-debug.log*
 yarn-debug.log*
