--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: '2.23'
 services:
   server: 
     build: .
+    volumes:
+      - ~/digitalchemistry/image-data:/usr/dist/client/images
     ports:
       - 8080:8080
     depends_on:
@@ -10,7 +12,7 @@ services:
         condition:
           service_healthy      
     environment:
-      - BUILD_PATH=${BUILD_PATH}
+      - PUBLIC_FILE_PATH=${PUBLIC_FILE_PATH}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_HOST=${POSTGRES_HOST}
       - REACT_APP_API_BASE_URL=${REACT_APP_API_BASE_URL}
@@ -21,7 +23,7 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - ~/apps/postgres-data:/var/lib/postgresql/data
+      - ~/digitalchemistry/postgres-data:/var/lib/postgresql/data
     environment:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
